# ntfy-app

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  linux.yml
app/: layout.tsx  page.tsx
app/automation/: page.tsx
app/config/: page.tsx
app/logs/: page.tsx
app/webhook/: page.tsx
components/: instance.tsx  webhook.tsx
components/automation/: index.tsx  modal.tsx
components/config/: index.tsx
components/logs/: index.tsx  refresh.tsx
components/ui/: alert-dialog.tsx  dialog.tsx  input.tsx  pagination.tsx  select.tsx  sonner.tsx  switch.tsx  textarea.tsx
docs/templates/windows/: Calculator.json  Copilot.json  Discord.json  Netflix.json  Whatsapp Beta.json  Whatsapp.json
lib/tauri/: automation.ts  readUrl.ts  saveUrl.ts  schedule.ts
modules/: index.ts  types.ts
modules/screen/: index.ts
modules/system/: index.ts
modules/volume/: index.ts
schema/: automation.ts  logs.ts
scripts/: release.mjs
src-tauri/: .prettierrc.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  config.rs  lib.rs  listener.rs  main.rs  overrides.rs  tray.rs  window.rs
src-tauri/src/automation/: engine.rs  executor.rs  matcher.rs  mod.rs  modules.rs  tokens.rs  validation.rs
src-tauri/src/automation/modules/: registry.rs  sound.rs
src-tauri/src/commands/: automation.rs  config.rs  logs.rs  mod.rs  schedule.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  repo.rs
src-tauri/src/db/repo/: automation.rs  logs.rs  schedule.rs
src-tauri/src/modules/: mod.rs  registry.rs  sound.rs
src-tauri/src/modules/screen/: config.rs  mod.rs
src-tauri/src/modules/sound/: config.rs  linux.rs  macos.rs  mod.rs  system.rs  windows.rs
src-tauri/src/modules/system/: mod.rs
src-tauri/src/tray/: linux.rs  native.rs  system.rs
src-tauri/src/windows/: automation.rs  config.rs  logs.rs  main.rs  mod.rs  webhook.rs
styles/: globals.css
types/: automation.ts  logs.ts  rules.ts  schedule.ts  webhook.ts
utils/: actionType.ts  buildUrl.ts  formatDate.ts  getAction.ts  getBase.ts  getConfig.ts  getPages.ts  matchType.ts  normalizeUrl.ts  readUrl.ts  saveUrl.ts  schedule.ts  startInstance.ts  status.ts  stripRule.ts
