[package]
name = "ntfy_app"
version = "0.0.10"
authors = ["rubixvi"]
description = "Desktop client for ntfy.sh and self-hosted ntfy instances on Windows, Linux, and macOS. Built with Rust, Tauri, and Next.js."
license = "MIT"
repository = "https://github.com/rubix-studios-pty-ltd/ntfy-app"
edition = "2024"
rust-version = "1.95.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[lib]
name = "ntfy_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
url = "2"
auto-launch = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
